err/zopen.frs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/datetime'...
Listing './lib/python3.5/site-packages/zope/datetime/tests'...
Listing './lib/python3.5/site-packages/zope.datetime-4.2.0.dist-info'...
Listing './lib/python3.5/site-packages/zopen'...
Listing './lib/python3.5/site-packages/zopen/frs'...
Compiling './lib/python3.5/site-packages/zopen/frs/frs.py'...
***   File "./lib/python3.5/site-packages/zopen/frs/frs.py", line 206
    def mkdir(self, vPath, mode=0777):
                                   ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/zopen/frs/recycle.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (recycle.py, line 73)
Compiling './lib/python3.5/site-packages/zopen/frs/utils.py'...
***   File "./lib/python3.5/site-packages/zopen/frs/utils.py", line 65
    _v_network = str(random() * 100000000000000000L)
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zopen.frs-1.2.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
